<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_baseline_arrow_back_ios_24"
        android:title="action_back"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_baseline_arrow_forward_ios_24"
        android:title="Next"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings"
        android:title="Settings" />

</menu>